# absol

./: .gitignore  LICENSE  README.md  absol.cabal  stack.yaml
app/: Cmdargs.hs  Main.hs
doc/demonstration_of_progress/: ABSOL.pptx
doc/dissertation/: .latexmkrc  ABSOL_Ara_Adkins.tex  Dissertation.tex
doc/dissertation/resources/: absol_test_file.tex  abstract.tex  acknowledgements.tex  architecture_and_algorithms.tex  bath_dissertation_definitions.tex  bibliography.bib  conclusion.tex  designing_the_metalanguage.tex  elucidation_requirements.tex  evaluation.tex  glossary.tex  implementation.tex  introduction.tex  literature_survey.tex  metaspec_grammar.tex  software_readme.tex  testing.tex
doc/literature_review/: .latexmkrc  CM30082_Literature_Review_Ara_Adkins.tex
doc/literature_review/resources/: bibliography.bib
doc/project_proposal/: CM30082_Project_Proposal_Ara_Adkins_ha385.tex
doc/project_proposal/resources/: bibliography.bib
doc/resources/: absol_architecture_diagram.ai  absol_development_diagram.ai
notes/: language_features_design_notes.md  metacompiler_design_notes.md  metalanguage_design_notes.md  metaverify_design_notes.md  project_restriction.md  useful_resources.md
plan/: absol_final_year_project_plan.mpp
spec/: metaspec.ebnf
src/: Absol.hs  metaspec.ebnf
src/Absol/: Metagen.hs  Metalex.hs  Metaparse.hs  Metaspec.hs  Metaverify.hs  Utilities.hs
src/Absol/Metagen/: Utilities.hs
src/Absol/Metalex/: Wrapper.hs
src/Absol/Metaparse/: Grammar.hs  Parser.hs  Utilities.hs  megaparsec_example.hs
src/Absol/Metaspec/: Special.hs
src/Absol/Metaverify/: Collate.hs  Diagnostics.hs  RuleTag.hs  State.hs
src/metagen/: Metagen.hs
src/metalex/: Metalex.hs
src/metaparse/: Metaparse.hs
src/metaverify/: Metaverify.hs
