name:                absol
version:             0.0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/iamrecursion/absol#readme
license:             BSD3
license-file:        LICENSE
author:              Ara Adkins
maintainer:          me@ara.io
copyright:           2017 Ara Adkins
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/metalex
                     , src/metagen
                     , src/metaparse
                     , src/metaverify
  exposed-modules:     Metalex
                     , Metagen
                     , Metaparse
                     , Metaverify
  build-depends:       base >= 4.7 && < 5
                     , text
                     , filepath
                     , containers
                     , parsec
  default-language:    Haskell2010
  default-extensions:  MagicHash
                     , NegativeLiterals
                     , NumDecimals
                     , BinaryLiterals
                     , PatternGuards
                     , ViewPatterns
                     , RecursiveDo
                     , ApplicativeDo
                     , ParallelListComp
                     , TransformListComp
                     , MonadComprehensions
                     , PostfixOperators
                     , TupleSections
                     , LambdaCase
                     , EmptyCase
                     , MultiWayIf
                     , UnboxedTuples
                     , ExistentialQuantification
                     , GADTSyntax
                     , GADTs
                     , DisambiguateRecordFields
                     , DuplicateRecordFields
                     , RecordWildCards
                     , DeriveGeneric
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , DeriveDataTypeable
                     , DeriveLift
                     , DeriveAnyClass
                     , PatternSynonyms
                     , MultiParamTypeClasses
                     , FlexibleContexts
                     , ConstrainedClassMethods
                     , DefaultSignatures
                     , FunctionalDependencies
                     , FlexibleInstances
                     , InstanceSigs
                     , OverloadedStrings
                     , OverloadedLabels
                     , OverloadedLists
                     , TypeFamilies
                     , DataKinds
                     , TypeInType
                     , ConstraintKinds
                     , ExplicitForAll
                     , KindSignatures
                     , ScopedTypeVariables
                     , TypeApplications
                     , ImplicitParams
                     , RankNTypes
                     , PartialTypeSignatures
                     , NamedWildCards
                     , TemplateHaskell
                     , BangPatterns
                     , StaticPointers

executable absol
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , absol
                     , text
  default-language:    Haskell2010

test-suite absol-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , absol
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iamrecursion/absol
