name:                absol
version:             0.0.1.0
synopsis:            Automatic Builder for Semantically Oriented Languages
description:         Please see README.md
homepage:            https://github.com/iamrecursion/absol#readme
license:             BSD3
license-file:        LICENSE
author:              Ara Adkins
maintainer:          me@ara.io
copyright:           2017 Ara Adkins
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src/
  exposed-modules:      Absol,
                        Absol.Metagen,
                        Absol.Metagen.Utilities,
                        Absol.Metalex,
                        Absol.Metaparse,
                        Absol.Metaparse.Grammar,
                        Absol.Metaparse.Utilities,
                        Absol.Metaverify,
                        Absol.Utilities
  build-depends:        base >= 4.7 && < 5
                      , text
                      , filepath
                      , containers
                      , megaparsec
  default-language:     Haskell2010
  default-extensions:   ApplicativeDo
                      , BangPatterns
                      , BinaryLiterals
                      , ConstrainedClassMethods
                      , ConstraintKinds
                      , DataKinds
                      , DefaultSignatures
                      , DeriveAnyClass
                      , DeriveDataTypeable
                      , DeriveFoldable
                      , DeriveFunctor
                      , DeriveGeneric
                      , DeriveLift
                      , DeriveTraversable
                      , DisambiguateRecordFields
                      , DuplicateRecordFields
                      , EmptyCase
                      , ExistentialQuantification
                      , ExplicitForAll
                      , FlexibleContexts
                      , FlexibleInstances
                      , FunctionalDependencies
                      , GADTs
                      , GADTSyntax
                      , ImplicitParams
                      , InstanceSigs
                      , KindSignatures
                      , LambdaCase
                      , MagicHash
                      , MonadComprehensions
                      , MultiParamTypeClasses
                      , MultiWayIf
                      , NamedWildCards
                      , NegativeLiterals
                      , NumDecimals
                      , OverloadedLabels
                      , OverloadedLists
                      , OverloadedStrings
                      , ParallelListComp
                      , PartialTypeSignatures
                      , PatternGuards
                      , PatternSynonyms
                      , PostfixOperators
                      , RankNTypes
                      , RecordWildCards
                      , RecursiveDo
                      , ScopedTypeVariables
                      , StaticPointers
                      , TemplateHaskell
                      , TransformListComp
                      , TupleSections
                      , TypeApplications
                      , TypeFamilies
                      , TypeInType
                      , UnboxedTuples
                      , ViewPatterns

executable absol
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  other-modules:        Cmdargs
  build-depends:        base
                      , absol
                      , optparse-applicative
                      , text
  default-extensions:   OverloadedStrings
  default-language:     Haskell2010

test-suite absol-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , absol
  default-language:     Haskell2010

source-repository head
  type:                 git
  location:             https://github.com/iamrecursion/absol
